--- a/follow.routing.yml
+++ b/follow.routing.yml
@@ -1,19 +1,19 @@
 follow.css_path:
   path: 'css/{filepath}'
   defaults:
-    _title: Generate Follow CSS
-    _content: \Drupal\follow\Controller\DefaultController::follow_css
+    _title: 'Generate Follow CSS'
+    _content: '\Drupal\follow\Controller\DefaultController::follow_css'
 follow.admin:
   path: 'admin/config/services/follow'
   defaults:
-    _title: Follow
-    _form: \Drupal\follow\Form\FollowLinksForm
+    _title: 'Follow'
+    _form: '\Drupal\follow\Form\FollowLinksForm'
   requirements:
-    _permission: '\Drupal\follow\Controller\DefaultController::edit site follow links'
+    _permission: 'edit site follow links'
 entity.user.follow_form:
   path: '/user/{user}/follow'
   defaults:
-    _title: Follow
-    _form: \Drupal\follow\Form\FollowLinksForm
+    _title: 'Follow'
+    _form: '\Drupal\follow\Form\FollowLinksForm'
   requirements:
     _custom_access: '\Drupal\follow\Controller\DefaultController::follow_links_user_access'
