--- a/follow.permissions.yml
+++ b/follow.permissions.yml
@@ -1,15 +1,15 @@
 'edit own follow links':
   title: 'Edit own follow links'
-  description: ''
+  restrict access: TRUE
 'edit site follow links':
   title: 'Edit the site-wide follow links'
-  description: ''
+  restrict access: TRUE
 'edit any user follow links':
-  title: 'Edit any user''s follow links'
-  description: ''
+  title: 'Edit any users follow links'
+  restrict access: TRUE
 'administer follow':
   title: 'Administer follow'
-  description: ''
+  restrict access: TRUE
 'change follow link titles':
   title: 'Change link titles'
-  description: 'Allows changing the text that appears in the follow links.'
+  restrict access: TRUE
